tools/tests/errors/surf_lib_02.experr
JSON parse error
expected ',' or ']'
